# benchmark-pipeline-public

./: .gitignore  LICENSE  Makefile.py  README.md  pyproject.toml
bench/cli/: bench.py  multi.py
bench/configs/: __init__.py
bench/configs/examples/: Multi-Device.yaml  Single_Device_Run.yaml
bench/core/: main.py
bench/core/analysis/viz/: colors.py  plots.py  plots_cpu.py  plots_cpu_single.py  plots_latency.py  plots_latency_single.py  plots_memory.py  plots_multi.py  plots_single.py  plots_summary.py  report_markdown.py
bench/core/config/: config_loader.py
bench/core/io/: result_writer.py
bench/core/measure/: measure_controller.py
bench/core/metrics/: __init__.py  cpu_meter.py  gpu_meter_jetson.py  macs_meter.py  memory_meter.py  model_size_meter.py  peak_memory_meter.py  timing_meter.py
bench/core/orchestrator/: device_loop.py
bench/core/runner/: __init__.py  base_runner.py  external_trt_bridge.py  onnx_runner.py  openvino_runner.py  provider_policy.py  tensorrt_runner.py  torch_runner.py
bench/core/schemas/: env_schema.py  hardware_capabilities_schema.py  hardware_detail_schema.py  hardware_schema.py  hardware_table_schema.py  run_schema.py
bench/core/system/: env_probe.py  hardware_probe.py  system_probe.py
bench/core/utils/: path_sanitizer.py  torch_model_loader.py
bench/tests/golden/: generate_golden_files.py  onnx_cpu.json  test_golden_regression.py  test_golden_sanitization.py  torch_cpu.json
bench/tests/helpers/: create_models.py  golden_sanitize.py
bench/tests/integration/: test_cpu_e2e.py  test_onnx_e2e.py  test_openvino_e2e.py  test_trt_e2e.py
bench/tests/unit/: test_device_key_sanitizer.py  test_measure_controller.py  test_memory_duration.py  test_metrics.py  test_provider_policy.py  test_report_markdown.py  test_runner_basic.py  test_schema_validation.py  test_viz_plots.py
bench/tools/: export_internal_model.py  trt_worker.py
docs/: CONFIGURATION.txt  DEVELOPMENT_NOTES.txt  METRICS.txt  OPERATOR_GUIDE.txt
